--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"dotenv-safe": "^4.0.4",
 		"eslint": "^3.19.0",
 		"express": "^4.16.4",
+		"express-fileupload": "^1.2.0",
 		"express-session": "^1.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^3.2.6",
 		"mongoose": "^5.5.12",
+		"multer": "^1.4.2",
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
 		"pug": "^2.0.0-beta.12",
